header and footer rough done

--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -8,3 +8,23 @@
 .navbar .brand {
   margin-left: 0px;
 }
+
+.footer {
+  padding: 20px 0px;
+  background-color: #EEEEEE;
+  text-align: center;
+  font-size: 18px;
+}
+
+.footer .social-icons {
+  margin-left: -20px;
+  padding-top: 10px;
+}
+
+.footer a {
+  color: #333333;
+}
+
+.page {
+  padding: 50px 20px 10px 20px;
+}
