--- a/spiderweb/app/views/main.html
+++ b/spiderweb/app/views/main.html
@@ -1,11 +1,16 @@
-<div class="hero-unit">
-  <h1>Cheerio!</h1>
-  <p>You now have</p>
-  <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-  </ul>
-  <p>installed.</p>
-  <h3>Enjoy coding! - Yeoman</h3>
-  <i class="icon-user"></i>
-  <p>test 1 2 3</p>
+<div class="row-fluid page">
+  <div class="span8">
+    <h1>Cheerio!</h1>
+    <p>You now have</p>
+    <ul>
+        <li ng-repeat="thing in awesomeThings">{{thing}}</li>
+    </ul>
+    <p>installed.</p>
+    <h3>Enjoy coding! - Yeoman</h3>
+    <i class="icon-user"></i>
+    <p>test 1 2 3</p>
+  </div>
+  <div class="span4">
+    <p>Tester Tester</p>
+  </div>
 </div>
