--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -26,5 +26,27 @@
 }
 
 .page {
-  padding: 50px 20px 10px 20px;
+  padding-top: 50px;
+}
+
+.padded {
+  padding: 10px;
+}
+
+.header {
+  background-color: #EEEEEE;
+  margin-top: -10px;
+}
+
+.header img {
+  padding: 10px 20px 0px 0px;
+}
+
+.hanging-spider {
+  text-align: center;
+}
+
+#beta {
+  padding-left: 10px;
+  margin-top: -10px;
 }
