--- a/spiderweb/app/views/main.html
+++ b/spiderweb/app/views/main.html
@@ -1,16 +1,25 @@
-<div class="row-fluid page">
-  <div class="span8">
-    <h1>Cheerio!</h1>
-    <p>You now have</p>
-    <ul>
-        <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-    </ul>
-    <p>installed.</p>
-    <h3>Enjoy coding! - Yeoman</h3>
-    <i class="icon-user"></i>
-    <p>test 1 2 3</p>
+<div class="row-fluid">
+  <div class="span2 offset1 hanging-spider">
+    <img src="images/PS_hangingSpider.png" />
+    <h3>FAST</h3>
   </div>
-  <div class="span4">
+  <div class="span2 hanging-spider">
+    <img src="images/PS_hangingSpider.png" />
+    <h3>EASY</h3>
+  </div>
+  <div class="span2 hanging-spider">
+    <img src="images/PS_hangingSpider.png" />
+    <h3>FREE</h3>
+  </div>
+  <div class="span4 offset1 padded">
+    <p>Tester Tester</p>
+  </div>
+</div>
+<div class="row-fluid">
+  <div class="span8 padded">
+    <h1>Cheerio!</h1>
+  </div>
+  <div class="span4 padded">
     <p>Tester Tester</p>
   </div>
 </div>
