--- a/spiderweb/app/views/main.html
+++ b/spiderweb/app/views/main.html
@@ -1,25 +1,61 @@
+<!-- HOME PAGE VIEW -->
+
+<div ng-controller="MainCtrl">
+  
+<!-- Hanging Spiders
+================================================== -->
 <div class="row-fluid">
-  <div class="span2 offset1 hanging-spider">
-    <img src="images/PS_hangingSpider.png" />
+  <div class="span2 offset1 hanging-spider"  ng-click="move('spider1Margin')">
+    <img src="images/PS_hangingSpider.png" ng-style="{ 'margin-top':spider1Margin }" />
     <h3>FAST</h3>
   </div>
-  <div class="span2 hanging-spider">
-    <img src="images/PS_hangingSpider.png" />
+  <div class="span2 hanging-spider" ng-click="move('spider2Margin')">
+    <img src="images/PS_hangingSpider.png" ng-style="{ 'margin-top':spider2Margin }" />
     <h3>EASY</h3>
   </div>
-  <div class="span2 hanging-spider">
-    <img src="images/PS_hangingSpider.png" />
+  <div class="span2 hanging-spider" ng-click="move('spider3Margin')">
+    <img src="images/PS_hangingSpider.png" ng-style="{ 'margin-top':spider3Margin }" />
     <h3>FREE</h3>
   </div>
+
+<!-- For Block
+================================================== -->
   <div class="span4 offset1 padded">
-    <p>Tester Tester</p>
+    <span class="for-block">
+      <img src="images/PS_angledFor.png" class="pull-left" />
+      <h4>Academic Research</h4>
+    </span>
+    <span class="for-block">
+      <img src="images/PS_angledFor.png" class="pull-left" />
+      <h4>Business Intelligence</h4>
+    </span>
+    <span class="for-block">
+      <img src="images/PS_angledFor.png" class="pull-left" />
+      <h4>The Curious</h4>
+    </span>
   </div>
 </div>
+
+<!-- Test Crawl
+================================================== -->
 <div class="row-fluid">
   <div class="span8 padded">
-    <h1>Cheerio!</h1>
+    <div id="test-crawl">
+      <h4 id="test">Take a Test Crawl</h4>
+      <form class="form-search">
+        <h5 id="url">URL:</h5>
+        <input type="text" class="input-xlarge search-query" placeholder="http://www.cnn.com">
+        <button type="submit" class="btn">Crawl</button>
+        <h4>Enter a Website</h4>
+      </form>
+    </div>
   </div>
-  <div class="span4 padded">
-    <p>Tester Tester</p>
+
+<!-- Spider Diaries
+================================================== -->
+  <div id="spider-diaries" class="span2 padded">
+    <img src="images/PS_spiderDiaries.png" />
+    <h4>Tutorials  &  Examples</h4>
   </div>
+</div>
 </div>
