--- a/spiderweb/app/views/main.html
+++ b/spiderweb/app/views/main.html
@@ -72,9 +72,9 @@
   <div class="span8 padded">
     <div id="test-crawl">
       <h4 id="test">Take a Test Crawl</h4>
-      <form class="form-search">
+      <form name="siteToCrawl" class="form-search">
         <h5 id="url">URL:</h5>
-        <input type="text" class="input-xlarge search-query" placeholder="http://www.cnn.com">
+        <input type="text" class="input-xlarge search-query" placeholder="http://www.cnn.com" ng-model="site1">
         <button type="submit" class="btn">Crawl</button>
         <h4>Enter a Website</h4>
       </form>
@@ -88,4 +88,263 @@
     <h4>Tutorials  &  Examples</h4>
   </div>
 </div>
+
+<!-- Advanced Options
+================================================== -->
+<div class="row-fluid">
+  <div class="{{spanSize}}"  ng-style="{ 'margin-top': advOptMargin }">
+    <span id="advanced-opts">
+      <a ng-href="" ng-mouseover="lineStyle={borderColor:'#005580'}" ng-mouseleave="lineStyle={borderColor:'#EEEEEE'}" ng-click="showOptions()">Advanced Options</a>
+      <hr ng-style="lineStyle" />
+    </span>
+  </div>
+</div>
+
+<div class="row-fluid adv-opts" ng-show="showAdvOpts">
+  <div class="row-fluid">
+    <div class="span10 offset1 crawl-opts">
+
+      <form name="crawlOpts" class="">
+        <fieldset>
+          <legend>Crawl Options</legend>
+          <div class="liner">
+
+          <div>
+            <h5 class="inline">Compare:</h5>
+            <input type="text" class="input-xlarge search-query" placeholder="another website" ng-model="site2">
+            <!-- Study TO-DO applications for "addable" -->
+            <a>Add another site</a>
+          </div>
+
+          <div>
+            <input type="number" class="input-small" placeholder="20" ng-model="magPages">
+            <h5>Max Pages</h5>
+          </div>
+
+          <div>
+            <input type="number" class="input-small" placeholder="100" ng-model="totalResults">
+            <h5>Total Results</h5>
+          </div>
+
+          <div>
+            <label class="checkbox inline">
+            <input type="checkbox" ng-model="externalSites">
+            <h5 class="inline">External Sites</h5>
+            </label>
+          </div>
+
+        </div>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+
+  <div class="row-fluid">
+    <div class="span2 offset1 text-opts">
+
+      <form name="textOpts" class="">
+        <fieldset>
+          <legend>Text Analysis</legend>
+          <div class="liner">
+
+          <label class="checkbox inline">
+            <input type="checkbox" ng-model="visibleText">
+            <h5 class="inline">Visible Text</h5>
+          </label>
+
+          <label class="checkbox inline">
+            <input type="checkbox" ng-model="headlines">
+            <h5 class="inline">Headlines</h5>
+          </label>
+
+          <label class="checkbox inline">
+            <input type="checkbox" ng-model="hiddenDescriptionss">
+            <h5 class="inline">Hidden Descriptions</h5>
+          </label>
+
+        </div>
+        </fieldset>
+      </form>
+    </div>
+
+    <div class="span2 offset1 link-opts">
+
+      <form name="linkOpts" class="">
+        <fieldset>
+          <legend>Link Analysis</legend>
+          <div class="liner">
+
+          <label class="checkbox inline">
+            <input type="checkbox" ng-model="linkText">
+            <h5 class="inline">Link Text</h5>
+          </label>
+
+          <label class="checkbox inline">
+            <input type="checkbox" ng-model="allLinks">
+            <h5 class="inline">All Links</h5>
+          </label>
+
+          <label class="checkbox inline">
+            <input type="checkbox" ng-model="externalLinks">
+            <h5 class="inline">External Links</h5>
+          </label>
+
+        </div>
+        </fieldset>
+      </form>
+    </div>
+
+    <div class="span4 offset1 word-opts">
+
+      <form name="wordOpts" class="">
+        <fieldset>
+          <legend>Word Search</legend>
+          <div class="liner">
+
+          <label>
+            <h5 class="inline">Word:</h5>
+            <input type="text" ng-model="searchWord">
+            <a>Add another word</a>
+          </label>
+
+          </div>
+        </fieldset>
+      </form>
+    </div>
+
+  </div>
+  <div class="row-fluid">
+    <div class="span4 offset1 cont-opts">
+
+      <form name="contOpts" class="">
+        <fieldset>
+          <legend>Word Context Analysis</legend>
+          <div class="liner">
+
+          <label>
+            <h5 id="context" class="inline">Word:</h5>
+            <input type="text" ng-model="searchWord">
+            <a>Add another context word</a>
+          </label>
+
+          </div>
+        </fieldset>
+      </form>
+    </div>
+
+    <div class="span5 offset1 stop-opts">
+
+      <form name="stopOpts" class="">
+        <fieldset>
+          <legend>Stop Word List</legend>
+          <div class="liner">
+
+          <label>
+            <h5 id="stop-list" class="inline">Stop Words:</h5>
+            <textarea ng-model="stopWords" placeholder="a, list, of, stop, words, pulled, from, the, model"></textarea>
+          </label>
+
+          </div>
+        </fieldset>
+      </form>
+    </div>
+
+  </div>
+  <div class="row-fluid">
+    <div class="span4 offset1 syn-opts">
+
+      <form name="synOpts" class="">
+        <fieldset>
+          <legend>Synonym Ring Analysis</legend>
+          <div class="liner">
+
+          <label>
+            <h5 class="inline">Predefined:</h5>
+            <select multiple="multiple">
+              <!-- TODO: use ng-repeat ot fill in options, set max-height too if needed -->
+              <option>Curse Words</option>
+              <option>Racist Language</option>
+              <option>Drug References</option>
+            </select>
+          </label>
+
+          <label>
+            <h5 id="wordnet" class="inline">WordNet:</h5>
+            <input type="text" ng-model="wordnet">
+            <a>Add another WordNet</a>
+          </label>
+
+          </div>
+        </fieldset>
+      </form>
+    </div>
+
+    <div class="span5 offset1 cust-opts">
+
+      <form name="custOpts" class="">
+        <fieldset>
+          <legend>Custom Synonym Ring</legend>
+          <div class="liner">
+
+          <label>
+            <h5 class="inline">Ring Name:</h5>
+            <input type="text" ng-model="ringName">
+          </label>
+
+          <label>
+            <h5 id="word-list" class="inline">Word List:</h5>
+            <textarea ng-model="custSynonymList" placeholder="a, comma, separated, list, of, words"></textarea>
+            <a>Add another word list</a>
+          </label>
+
+          </div>
+        </fieldset>
+      </form>
+    </div>
+
+  </div>
+  <div class="row-fluid">
+    <div class="span4 offset1 xpath-opts">
+
+      <form name="xpathOpts" class="">
+        <fieldset>
+          <legend>XPath Selector</legend>
+          <div class="liner">
+
+          <label>
+            <h5 id="wordnet" class="inline">Selector:</h5>
+            <input type="text" ng-model="xpathSelector1">
+          </label>
+
+          <a>Add another XPath selector</a>
+
+          </div>
+        </fieldset>
+      </form>
+    </div>
+
+    <div class="span5 offset1 css-opts">
+
+      <form name="cssOpts" class="">
+        <fieldset>
+          <legend>CSS Selector</legend>
+          <div class="liner">
+
+          <label>
+            <h5 class="inline">Selector:</h5>
+            <input type="text" ng-model="cssSelector1">
+            <input type="checkbox" ng-model="cssText1">
+            <h5 class="inline">Text</h5>
+          </label>
+
+          <a>Add another CSS selector</a>
+
+          </div>
+        </fieldset>
+      </form>
+    </div>
+
+  </div>
+</div>
+
 </div>
