--- a/spiderweb/app/views/ourwords.html
+++ b/spiderweb/app/views/ourwords.html
@@ -1,13 +1,10 @@
 <div class="row-fluid">
   <div ng-include src="template" class="span10 padded">
   </div>
-  <div class="span2 padded">
+  <div class="span2 padded side-nav">
     <h3>Our Words</h3>
-    <a href="#/ourwords/about">About</a><br />
-    <a href="#/ourwords/privacy">Privacy</a><br />
-    <a href="#/ourwords/terms">Terms of Service</a><br />
-    <a href="#/ourwords/devteam">Dev Team</a><br />
-    <a href="#/ourwords/pricing">Pricing</a><br />
-    <a href="#/ourwords/terms">Contact</a><br />
+    <span ng-repeat="page in aboutPages">
+      <h4><a href="#/ourwords/{{page}}">{{page}}</a></h4>
+    </span> 
   </div>
 </div>
