--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -1,5 +1,9 @@
 @import "compass_twitter_bootstrap";
 
+
+// heights: navbar+header=120, footer=80.
+// must set dynamically
+
 .navbar .nav > li > p {
     padding: 10px 0px;
     margin: 0px
@@ -26,7 +30,7 @@
 }
 
 .page {
-  padding-top: 50px;
+  padding-top: 34px;
 }
 
 .padded {
@@ -35,17 +39,17 @@
 
 .header {
   background-color: #EEEEEE;
-  margin-top: -10px;
   position: relative;
   z-index: 10;
-}
 
-.header img {
-  padding: 10px 20px 0px 0px;
-}
+  img {
+    padding: 10px 20px 0px 0px;
+  }
 
-.header h1 {
-  margin-bottom: -10px;
+  h1 {
+    margin-bottom: -10px;
+    color: #333333;
+  }
 }
 
 #analyze {
@@ -65,6 +69,7 @@
     width: 200px;
     position: relative;
     z-index: 5;
+    min-width: 200px;
     &:hover{
       cursor: pointer;
     }
@@ -134,4 +139,135 @@
 
 #spider-diaries h4 {
   color: blue;
+}
+
+#advanced-opts {
+  margin-left: 500px;
+
+  hr {
+    margin-top: -3px;
+
+  }
+}
+
+.adv-opts {
+
+  form {
+    background-color: #EEEEEE;
+    padding-bottom: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+  }
+      
+  legend {
+    background-color: #FFF;
+    border-color: #333;
+  }
+
+  h5 {
+    margin-top: 0px;
+  }
+
+  input {
+    margin-bottom: 0px;
+  }
+}
+
+.crawl-opts {
+
+  a {
+    display: block;
+    margin-left: 250px;
+  }
+
+  div {
+    float: left;
+    padding: 0px 25px;
+    text-align: center;
+  }
+}
+
+.text-opts, .link-opts {
+  
+  .checkbox.inline {
+    display: block;
+    margin-left: 0px !important;
+    padding-bottom: 10px;
+  }
+}
+
+.word-opts, .syn-opts, .cust-opts, .cont-opts,
+.stop-opts, .xpath-opts, .css-opts {
+
+  a {
+    display: block;
+    margin-left: 150px;
+  }
+
+  input {
+    margin-bottom: 10px;
+  }
+
+  textarea {
+    margin-bottom: 10px;
+    width: 70%;
+  }  
+}
+
+.icon-remove {
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+//.cust-opts a {
+//  margin-left: 300px;
+//}
+
+.css-opts input[type="checkbox"] {
+  margin-left: 30px;
+}
+
+#wordnet {
+  padding-left: 14px;
+}
+
+#word-list {
+  padding-left: 10px;
+}
+
+// SUBVIEW SIDE NAVIGATION
+//////////////////////////
+.side-nav {
+
+  a {
+    color: #333333;
+    padding-left: 10px;
+    margin-top: -20px;
+  }
+
+  h3 {
+    margin-bottom: -5px;
+  }
+}
+
+.sub-links {
+
+  a {
+    padding-left: 20px;
+  }
+}
+
+// HELPER FUNCS
+//////////////////////////
+
+.inline {
+  display: inline;
+}
+
+.liner {
+  width: 80%;  
+  margin-left: auto;
+  margin-right: auto;
 }
