working splashdown, json loaded

--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -278,6 +278,19 @@
   padding-left: 10px;
 }
 
+// Splashdown 
+//////////////////////////
+.analysis-header {
+  h2 {
+    padding-left: 50px;
+    font-weight: normal;
+  }
+  h4 {
+    padding-left: 50px;
+    font-weight: normal;
+  }
+}
+
 // SUBVIEW SIDE NAVIGATION
 //////////////////////////
 .side-nav {
