--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -327,6 +327,18 @@
   }
 }
 
+.result-btns {
+  float: right;
+}
+
+.active-true {
+  background-color: #E6E6E6;
+  background-position: 0 -15px;
+  color: #333333;
+  text-decoration: none;
+  transition: background-position 0.1s linear 0s;
+}
+
 .tab-content {
    background-color: #EEEEEE;
    padding-top: 20px;
@@ -340,6 +352,9 @@
 
 .analysis-content {
   padding-left: 20px;
+    
+  @include clearfix;
+
 }
 
 .analysis-box {
@@ -347,8 +362,25 @@
   width: 250px;
   padding-top: 10px;
   display: inline-block;
-  margin: 0px 40px;
+  margin: 0px 45px;
 }
+
+.info-box {
+  width: 592px;
+  padding-top: 10px;
+  display: inline-block;
+  margin: 0px 45px;
+  text-align: center;
+  float: right;
+
+  .add-info-btns {
+    float: right;
+    margin-top: -35px;
+    margin-right: 30px;
+  }
+
+}
+
 .url {
   font-weight: normal;
 }
@@ -363,7 +395,25 @@
   overflow-y: scroll;
   background-color: white;
   text-align: center;
-  margin: 10px;
+}
+
+.info-pane {
+  width: 592px;
+  //height: 300px;
+  //overflow-y: scroll;
+  background-color: white;
+  text-align: center;
+
+  h4 {
+    text-align: left;
+    padding-left: 10px;
+  }
+}
+
+.page-pane {
+  display: inline-block;
+  width: 592px;
+  border-right: 1px solid #EEEEEE;
 }
 
 .word-box {
@@ -393,7 +443,19 @@
   width: 134px;
   margin-left: auto;
   margin-right: auto;
+
+  &:hover {
+    cursor: pointer;
+    color: blue;
+  }
 }
+
+.page-box {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 .common {
 
@@ -408,6 +470,17 @@
     float: none;
     display: inline;
   }
+}
+
+.color-1 { color: blue; }
+.color-2 { color: red; }
+.color-3 { color: green; }
+.color-4 { color: yellow; }
+.color-5 { color: purple; }
+
+.include-false {
+  text-decoration: line-through;
+  color: grey;
 }
 
 .compare-sites {
