--- a/spiderweb/app/views/splashdown.html
+++ b/spiderweb/app/views/splashdown.html
@@ -8,13 +8,18 @@
 <!-- RESULT TABS
 ================================================== -->
     <div class="row-fluid">
+      <div class="btn-group result-btns">
+        <button class="btn active-{{internal}}" ng-click="resultsChoice('internal')">Internal</button>
+        <button class="btn active-{{external}}" ng-click="resultsChoice('external')">External</button>
+      </div>
       <tabs>
         <pane heading="Text">
           <div ng-repeat="site in analysis.sites" class="analysis">
             <h4 class="inline">Site {{$index + 1}}:</h4><h4 class="inline url"> {{site.url}}</h4>
             <h5 class="inline search-filter">Search: </h5><input ng-model="searchText">
             <div class="analysis-content">
-              <div class="analysis-box" ng-init="resultVisible = site.results[0]" ng-show="resultVisible.words">
+
+              <div class="analysis-box" ng-show="site[results].visibleText.words">
                 <h4>Visible Text</h4>
                 <div class="word-pane">
                   <div class="word-box title">
@@ -22,14 +27,15 @@
                     <div class="count">Count</div>
                     <div class="word">Word</div>
                   </div>
-                  <div ng-repeat="word in resultVisible.words | limitTo:100 | filter:searchText" class="word-box">
+                  <div ng-repeat="word in site[results].visibleText.words | limitTo:100 | filter:searchText" class="word-box">
                     <div class="rank">{{word.rank}}</div>
                     <div class="count">{{word.count}}</div>
-                    <div class="word">{{word.word}}</div>
+                    <div class="word" ng-click="addInfo(word, site, '- (visible text)')">{{word.word}}</div>
                   </div>
                 </div>
               </div>
-              <div class="analysis-box" ng-init="resultHeadline = site.results[1]" ng-show="resultHeadline.words">
+
+              <div class="analysis-box" ng-show="site[results].headlineText.words">
                 <h4>Headline Text</h4>
                 <div class="word-pane">
                   <div class="word-box title">
@@ -37,14 +43,15 @@
                     <div class="count">Count</div>
                     <div class="word">Word</div>
                   </div>
-                  <div ng-repeat="word in resultHeadline.words | limitTo:100 | filter:searchText" class="word-box">
+                  <div ng-repeat="word in site[results].headlineText.words | limitTo:100 | filter:searchText" class="word-box">
                     <div class="rank">{{word.rank}}</div>
                     <div class="count">{{word.count}}</div>
-                    <div class="word">{{word.word}}</div>
+                    <div class="word" ng-click="addInfo(word, site, '- (headline text)')">{{word.word}}</div>
                   </div>
                 </div>
               </div>
-              <div class="analysis-box" ng-init="resultHidden = site.results[2]" ng-show="resultHidden.words">
+
+              <div class="analysis-box" ng-show="site[results].hiddenText.words">
                 <h4>Hidden Text</h4>
                 <div class="word-pane">
                   <div class="word-box title">
@@ -52,13 +59,66 @@
                     <div class="count">Count</div>
                     <div class="word">Word</div>
                   </div>
-                  <div ng-repeat="word in resultHidden.words | limitTo:100 | filter:searchText" class="word-box">
+                  <div ng-repeat="word in site[results].hiddenText.words | limitTo:100 | filter:searchText" class="word-box">
                     <div class="rank">{{word.rank}}</div>
                     <div class="count">{{word.count}}</div>
-                    <div class="word">{{word.word}}</div>
+                    <div class="word" ng-click="addInfo(word, site, '- (hidden text)')">{{word.word}}</div>
                   </div>
                 </div>
               </div>
+
+              <div class="analysis-box" ng-show="site[results].searchWords.words">
+                <h4>Search Words</h4>
+                <div class="word-pane">
+                  <div class="word-box title">
+                    <div class="rank">Rank</div>
+                    <div class="count">Count</div>
+                    <div class="word">Word</div>
+                  </div>
+                  <div ng-repeat="word in site[results].searchWords.words | limitTo:100 | filter:searchText" class="word-box">
+                    <div class="rank">{{$index}}</div>
+                    <div class="count">{{word.count}}</div>
+                    <div class="word" ng-click="addInfo(word, site, '- (search words)')">{{word.word}}</div>
+                  </div>
+                </div>
+              </div>
+
+              
+              <div class="info-box">
+                <h4>Additional Info</h4>
+                <div class="btn-group add-info-btns">
+                  <button class="btn active-{{site.additionalInfo.pagesSel}}" ng-click="addInfoChoice(site, 'pages')">Pages</button>
+                  <button class="btn active-{{site.additionalInfo.tagsSel}}" ng-click="addInfoChoice(site, 'tags')">Tags</button>
+                </div>
+                <div class="info-pane">
+                  <h4>Word: <span class="url">{{site.additionalInfo.word}} {{site.additionalInfo.type}}</span></h4>
+                  <div class="page-pane" ng-show="site.additionalInfo.selected && site.additionalInfo.pagesSel">
+                    <div class="word-box title">
+                      <div class="rank">Rank</div>
+                      <div class="count">Count</div>
+                      <div class="word">Page</div>
+                    </div>
+                    <div ng-repeat="page in site.additionalInfo.pages | limitTo:9" class="word-box">
+                      <div class="rank">{{$index + 1}}</div>
+                      <div class="count">{{page.count}}</div>
+                      <div class="page-box">{{page.page}}</div>
+                    </div>
+                  </div>
+                  <div class="page-pane" ng-show="site.additionalInfo.selected && site.additionalInfo.tagsSel">
+                    <div class="word-box title">
+                      <div class="rank">Rank</div>
+                      <div class="count">Count</div>
+                      <div class="word">Tag</div>
+                    </div>
+                    <div ng-repeat="tag in site.additionalInfo.tags | limitTo:9" class="word-box">
+                      <div class="rank">{{$index + 1}}</div>
+                      <div class="count">{{tag.count}}</div>
+                      <div class="page-box">{{tag.tag}}</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             </div>
             <hr />
           </div>
@@ -74,47 +134,57 @@
               <div ng-repeat="site in analysis.sites">
                 <label class="checkbox inline">
                   <input type="checkbox" ng-model="site.include">
-                  <h5 class="inline">Site {{$index + 1}}:</h5>
-                  <h5 class="inline url"> {{site.url}}</h5>
+                  <h5 class="inline color-{{($index + 1) % 5}} include-{{site.include}}">Site {{$index + 1}}:</h5>
+                  <h5 class="inline url color-{{($index + 1) % 5}} include-{{site.include}}"> {{site.url}}</h5>
               </label>
               </div>
             </div>
+
             <div class="analysis-content">
-              <div class="analysis-box" ng-show="analysis.sites[0].results[0].words">
+              <!-- only show comparison if results exists and more than 1 site -->
+              <div class="analysis-box" ng-show="analysis.sites[1][results].visibleText.words">
                 <h4>Visible Text</h4>
                 <div class="word-pane  common">
                   <div class="word-box title">
                     <div class="rank">Rank</div>
                     <div class="word">Word</div>
                   </div>
-                  <div ng-repeat="word in commonWords[0] | limitTo:100" class="word-box">
-                    <div class="rank">{{word.rank}}</div>
+                  <div ng-repeat="word in commonWords['visibleText'] | limitTo:100" class="word-box">
+                    <div ng-repeat="rank in word.rank" class="rank color-{{commonColors[$index]}}">
+                      <span>{{rank}}</span>
+                    </div>
                     <div class="word">{{word.word}}</div>
                   </div>
                 </div>
               </div>
-              <div class="analysis-box" ng-show="analysis.sites[0].results[1].words">
+
+              <div class="analysis-box" ng-show="analysis.sites[1][results].headlineText.words">
                 <h4>Headline Text</h4>
                 <div class="word-pane  common">
                   <div class="word-box title">
                     <div class="rank">Rank</div>
                     <div class="word">Word</div>
                   </div>
-                  <div ng-repeat="word in commonWords[1] | limitTo:100" class="word-box">
-                    <div class="rank">{{word.rank}}</div>
+                  <div ng-repeat="word in commonWords['headlineText'] | limitTo:100" class="word-box">
+                    <div ng-repeat="rank in word.rank" class="rank color-{{commonColors[$index]}}">
+                      <span>{{rank}}</span>
+                    </div>
                     <div class="word">{{word.word}}</div>
                   </div>
                 </div>
               </div>
-              <div class="analysis-box" ng-show="analysis.sites[0].results[2].words">
+
+              <div class="analysis-box" ng-show="analysis.sites[1][results].hiddenText.words">
                 <h4>Hidden Text</h4>
                 <div class="word-pane common">
                   <div class="word-box title">
                     <div class="rank">Rank</div>
                     <div class="word">Word</div>
                   </div>
-                  <div ng-repeat="word in commonWords[2] | limitTo:100" class="word-box">
-                    <div class="rank">{{word.rank}}</div>
+                  <div ng-repeat="word in commonWords['hiddenText'] | limitTo:100" class="word-box">
+                    <div ng-repeat="rank in word.rank" class="rank color-{{commonColors[$index]}}">
+                      <span>{{rank}}</span>
+                    </div>
                     <div class="word">{{word.word}}</div>
                   </div>
                 </div>
